content/posts/Highly-available-Nginx-using-auto-scaling-groups-load-balancer-and-terraform-on-aws/deployment/03-VPC.tf
resource "aws_vpc" "vpc" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"
  tags = {
    "Name" = "${var.Name-Tag} vpc"
  }
}
