content/posts/Highly-available-Nginx-using-auto-scaling-groups-load-balancer-and-terraform-on-aws/deployment/04-InternetGateway.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    "Name" = "${var.Name-Tag} ig"
  }
}
