content/posts/Highly-available-Nginx-using-auto-scaling-groups-load-balancer-and-terraform-on-aws/deployment/05-RouteTable.tf
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ig.id
  }

  tags = {
    "Name" = "${var.Name-Tag} rt"
  }
}
