content/posts/Highly-available-Nginx-using-auto-scaling-groups-load-balancer-and-terraform-on-aws/deployment/11-ApplicationLoadBalancer.tf
resource "aws_lb" "alb" {
  name               = "alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.web_sg.id]
  subnets            = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id]

  tags = {
    "Name" = "${var.Name-Tag} Application LB"
  }
}
